# tdc-assistant-session-request-controller

./: .gitignore  LICENSE  README.md  setup.cfg
src/tdc_assistant_session_request_controller/: controller.py
src/tdc_assistant_session_request_controller/event_handlers/: base_event_handler.py
src/tdc_assistant_session_request_controller/events/: event.py
src/tdc_assistant_session_request_controller/logger/: logger.py
src/tdc_assistant_session_request_controller/observers/: __init__.py  base_observer.py  classroom_open_observer.py  window_observer.py
src/tdc_assistant_session_request_controller/utils/: constants.py
src/tdc_assistant_session_request_controller/windows/: __init__.py  get_all_windows.py  get_first_window.py  window_manager.py
src/tdc_assistant_session_request_controller/windows/control_texts/enums/: __init__.py  control_text.py
src/tdc_assistant_session_request_controller/windows/window_titles/: __init__.py  window_titles.py
src/tdc_assistant_session_request_controller/windows/window_titles/enums/: __init__.py  window_title.py
