[metadata]
name = tdc-assistant-session-request-controller
version = 0.0.1
url = https://github.com/c-c-ca/tdc-assistant-session-request-controller
author = Adam Carter
author_email = adm.carter@gmail.com
description = Automation tool for Monitoring TDC Session Request
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
package_dir =
    =src
packages = find:
include_package_data = True
python_requires = >= 3.9
install_requires =
    pywinauto==0.6.8

[options.packages.find]
where = src
exclude =
    test*

[tool:pytest]
testpaths = test
addopts =  --cov --strict-markers
xfail_strict = True

[testenv]
commands =
    pytest {posargs}
deps =
    pytest
    pytest-cov
    pytest-randomly

[coverage:run]
branch = True
source = tdc_assistant_session_request_controller

[coverage:report]
show_missing = True
skip_covered = True

[coverage:paths]
source =
    src/tdc_assistant_session_request_controller/
    */site-packages/tdc_assistant_session_request_controller